--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,8 @@
             <span class="tagline">LLM-based iterative test assistant</span>
         </div>
         <div class="toolbar-actions">
-            <button type="button" data-action="scroll-latest">跳到最新</button>
-            <button type="button" data-action="clear-chat">清空对话</button>
+            <button type="button" data-action="stop-run">停止</button>
+            <button type="button" data-action="clear-chat">清空</button>
         </div>
     </header>
     <div id="no-message">
