feat(UI update)

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,13 @@
             <span class="name">Intention Test</span>
             <span class="tagline">LLM-based iterative test assistant</span>
         </div>
+        <div class="status-pill" aria-live="polite">
+            <span class="status-dot"></span>
+            <span class="status-text">Idle</span>
+        </div>
         <div class="toolbar-actions">
+            <button type="button" data-action="jump-latest">跳到最新</button>
+            <button type="button" data-action="toggle-scroll-lock" data-locked="false">阅读锁定</button>
             <button type="button" data-action="stop-run">停止</button>
             <button type="button" data-action="clear-chat">清空</button>
         </div>
